[project]
name = "ai-agent-assignment"
version = "0.1.0"
description = "An introduction to AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "mistune>=3.1.2",
    "openai>=1.66.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "responses>=0.25.6",
]
